# usrsctp

./: .travis.yml  CMakeLists.txt  make-ppa
debian/: changelog  control
programs/: CMakeLists.txt  datachan_serv.c
rpm/: libusrsctp.spec
usrsctplib/netinet/: sctp_input.c  sctp_pcb.c  sctp_usrreq.c
